# povmodeler

./: .gitignore  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  FILES  INSTALL  README  README.md  TODO  config.h.in  pmimenubar.cpp  pmimenubar.h  pmpart.cpp  pmpart.h  pmshell.cpp  pmshell.h  povmodeler.desktop  povmodeler.mdj  slack-desc  version.h.in
old-stuff/src/: CMakeLists.txt  ipmshell.cpp  ipmshell.h  main.cpp  pmpart.h  pmshell.cpp  pmshell.h  pmviewlayoutmanager.cpp
old-stuff/src/base/: pmmatrix.h  pmpalettevalue.h  pmrendermode.h  pmresourcelocator.h  pmxmlhelper.cpp  pmxmlhelper.h
old-stuff/src/gui/: CMakeLists.txt  pmbicubicpatchedit.cpp  pmblobcylinderedit.cpp  pmblobsphereedit.cpp  pmbumpmapedit.cpp  pmcameraedit.cpp  pmclippedbyedit.cpp  pmcolorsettings.cpp  pmcommand.h  pmcommandmanager.cpp  pmcommentedit.cpp  pmdensityedit.cpp  pmglview.cpp  pmgraphicalobjectedit.cpp  pmgridsettings.cpp  pmheightfieldedit.cpp  pminterioredit.cpp  pmisosurfaceedit.cpp  pmjuliafractaledit.cpp  pmlatheedit.cpp  pmlayoutsettings.cpp  pmlibraryentrypreview.cpp  pmlibraryhandleedit.cpp  pmlibraryobjectsearch.cpp  pmlightgroupedit.cpp  pmlinkedit.cpp  pmlistpatternedit.cpp  pmmaterialedit.cpp  pmnormaledit.cpp  pmobjectlibrarysettings.cpp  pmobjectlinkedit.cpp  pmobjectselect.cpp  pmobjectsettings.cpp  pmopenglsettings.cpp  pmpalettevalueedit.cpp  pmphotonsedit.cpp  pmplaneedit.cpp  pmpolynomedit.cpp  pmpovraymatrixedit.cpp  pmpovraysettings.cpp  (+15 more)
old-stuff/src/model/: pmbicubicpatch.cpp  pmbicubicpatch.h  pmblendmapmodifiers.h  pmblob.cpp  pmblob.h  pmbox.h  pmbumpmap.cpp  pmbumpmap.h  pmcamera.cpp  pmclippedby.h  pmcompositeobject.cpp  pmcylinder.cpp  pmdeclare.cpp  pmdensity.cpp  pmdetailobject.cpp  pmdetailobject.h  pmdisc.h  pmfinish.h  pmfog.cpp  (+55 more)
src/: CMakeLists.txt  CModellerApp.cpp  ipmpartextern.cpp  ipmpartextern.h  ipmviewmenu.h  main.cpp  main.h  mpmviewmenu.h  pmdockwidget.cpp  pmdockwidget_private.cpp  pmlibraryobject.h  pmpart.cpp  pmpart.h  pmpluginmanager.cpp  pmrendermanager.cpp  pmserializer.h  pmshell.cpp  pmshell.h  pmviewlayoutmanager.cpp  pmviewlayoutmanager.h
src/base/: CMakeLists.txt  pmchange.h  pmmatrix.h  pmrendermode.cpp  pmresourcelocator.cpp  pmxmlparser.cpp
src/gui/: CMakeLists.txt  pmblendmapmodifiersedit.cpp  pmblobedit.cpp  pmboundedbyedit.cpp  pmboxedit.cpp  pmcoloredit.cpp  pmcolorsettings.cpp  pmcolorsettings.h  pmconeedit.cpp  pmcsgedit.cpp  pmcylinderedit.cpp  pmdeclareedit.cpp  pmdetailobjectedit.cpp  pmdialogeditbase.cpp  pmdialogview.cpp  pmdiscedit.cpp  pmdocumentationmap.cpp  pmdragwidget.cpp  pmerrordialog.cpp  pmfiledialog.cpp  pmfinishedit.cpp  pmfogedit.cpp  pmglobalphotonsedit.cpp  pmglobalsettingsedit.cpp  pmgridsettings.cpp  pmimagemapedit.cpp  pmimenubar.cpp  pmimenubar.h  pminserterrordialog.cpp  pminteriortextureedit.cpp  pmlayoutsettings.cpp  pmlibrarybrowser.cpp  pmlibraryiconview.cpp  pmlibraryobjectsearch.cpp  pmlightedit.cpp  pmlineedits.cpp  pmmaterialmapedit.cpp  pmmediaedit.cpp  pmmeshedit.cpp  pmnamedobjectedit.cpp  (+30 more)
src/messages/: eModelElementFormat.h  tMsgAddElementReply.h  tMsgAddElementReq.h  tMsgEndImportReply.h  tMsgEndImportReq.h  tMsgStartImportReply.h  tMsgStartImportReq.h
src/model/: CMakeLists.txt  pmbicubicpatch.cpp  pmblendmapmodifiers.cpp  pmblob.cpp  pmblobcylinder.cpp  pmblobcylinder.h  pmblobsphere.cpp  pmblobsphere.h  pmboundedby.cpp  pmboundedby.h  pmbox.cpp  pmbox.h  pmbumpmap.cpp  pmcamera.cpp  pmcamera.h  pmclippedby.cpp  pmcomment.cpp  pmcomment.h  pmcompositeobject.cpp  pmcompositeobject.h  pmcone.cpp  pmcone.h  pmcsg.cpp  pmcsg.h  pmcylinder.cpp  pmcylinder.h  pmdeclare.cpp  pmdeclare.h  pmdensity.cpp  pmdensity.h  pmdetailobject.cpp  pmdisc.cpp  pmface.h  pmfinish.cpp  pmfog.cpp  pmfog.h  pmglobalphotons.cpp  pmglobalsettings.cpp  pmglobalsettings.h  pmgraphicalobject.cpp  (+94 more)
src/modelifc/: CEvent.cpp  CEvent.h  CMakeLists.txt  CMutex.cpp  CMutex.h  CSystemTime.cpp  CSystemTime.h  CThread.cpp  CThread.h  commtarget.h  coreifc.cpp  coreifc.h  dbmsg.h  helper.cpp  helper.h  json.cpp  json.h  logger.cpp  logger.h  logthread.cpp  logthread.h  modelifc.files  msg.h  msgdb.h  msgqueue.cpp  msgqueue.h  msgthread.cpp  msgthread.h  netpack.h  pointerindex.cpp  pointerindex.h  ptrnode.cpp  ptrnode.h  simapi.cpp  simapi.h  simattrarray.cpp  simattrarray.h  simattrbase.cpp  simattrbase.h  simattribute.cpp  (+16 more)
src/modeller/: CGUI.cpp  CGUI.h  CMakeLists.txt  CModel.cpp  CModel.h  CModelBaseState.cpp  CModelBaseState.h  CModelIdleState.cpp  CModelIdleState.h  CModelImportKpmState.cpp  CModelImportKpmState.h  CModelImportState.cpp  CModelImportState.h  CModelInput.cpp  CModelInput.h  CModelLoadingState.cpp  CModelLoadingState.h  CModelNode.cpp  CModelNode.h  CModelStateCtrl.cpp  CModelStateCtrl.h  CModelStoreThread.cpp  CModelStoreThread.h  CModellerApp.cpp  CModellerApp.h  CSettings.cpp  CSettings.h  IEditMenu.cpp  IEditMenu.h  IFileMenu.cpp  IFileMenu.h  IGUIInput.cpp  IGUIInput.h  IHelpMenu.cpp  IHelpMenu.h  IIncomingMessages.cpp  IIncomingMessages.h  IModelInput.cpp  IModelInput.h  IOutgoingMessages.cpp  (+10 more)
src/modelstore/: CBicubicPatch.cpp  CBicubicPatch.h  CBlob.cpp  CBlob.h  CBox.cpp  CBox.h  CCamera.cpp  CCamera.h  CCone.cpp  CCone.h  CCylinder.cpp  CCylinder.h  CDifference.cpp  CDifference.h  CDisc.cpp  CDisc.h  CFinish.cpp  CFinish.h  CHalo.cpp  CHalo.h  CHeightField.cpp  CHeightField.h  CIntersection.cpp  CIntersection.h  CIsoSurface.cpp  CIsoSurface.h  CJuliaFractal.cpp  CJuliaFractal.h  CLathe.cpp  CLathe.h  CLightGroup.cpp  CLightGroup.h  CLightSource.cpp  CLightSource.h  CMainViewport.cpp  CMainViewport.h  CMakeLists.txt  CMerge.cpp  CMerge.h  CMesh.cpp  (+60 more)
src/newui/: CMakeLists.txt  ipmfilemenu.cpp  ipmfilemenu.h  ipmviewmenu.cpp  ipmviewmenu.h  main.cpp  mpmviewmenu.cpp  pmapp.cpp  pmapp.h  pmmainwindow.ui  pmmodel.cpp  pmmodel.h  pmrecentfilelist.cpp  pmrecentfilelist.h  pmsettings.cpp  pmsettings.h  sigpmfilemenu.h  sigpmpropertywidget.cpp  sigpmpropertywidget.h  sigpmtreewidget.cpp  sigpmtreewidget.h  sigpmviewmenu.cpp  sigpmviewmenu.h
src/rendermgr/: CMakeLists.txt  main.cpp  main.h
(+30 files in other folders)
