

add_library(pmgui
    pmaddcommand.cpp             pmcsgedit.cpp            pmformulalabel.cpp         pmlayoutsettings.cpp       pmmovecommand.cpp            pmpolynomexponents.cpp    pmsettingsdialog.cpp   pmtreeviewitem.cpp
    pmbicubicpatchedit.cpp       pmcylinderedit.cpp       pmglobalphotonsedit.cpp    pmlibrarybrowser.cpp       pmnamedobjectedit.cpp        pmpovraymatrixedit.cpp    pmskysphereedit.cpp
    pmblendmapmodifiersedit.cpp  pmdatachangecommand.cpp  pmglobalsettingsedit.cpp   pmlibraryentrypreview.cpp  pmnormaledit.cpp             pmpovrayoutputwidget.cpp  pmslopeedit.cpp        pmtriangleedit.cpp
    pmblobcylinderedit.cpp       pmdeclareedit.cpp        pmglview.cpp               pmlibraryhandleedit.cpp    pmobjectdrag.cpp             pmpovrayrenderwidget.cpp  pmsolidcoloredit.cpp   pmtruetypecache.cpp
    pmblobedit.cpp               pmdeletecommand.cpp      pmgraphicalobjectedit.cpp  pmlibraryiconview.cpp      pmobjectlibrarysettings.cpp  pmpovraysettings.cpp      pmsolidobjectedit.cpp  pmunknownview.cpp
    pmblobsphereedit.cpp         pmdensityedit.cpp        pmgridsettings.cpp         pmlibraryobjectsearch.cpp  pmobjectlinkedit.cpp         pmpovraywidget.cpp        pmsoredit.cpp          pmvectoredit.cpp
    pmboundedbyedit.cpp          pmdetailobjectedit.cpp   pmheightfieldedit.cpp      pmlightedit.cpp            pmobjectselect.cpp           pmpreviewsettings.cpp     pmsphereedit.cpp       pmvectorlistedit.cpp
    pmboxedit.cpp                pmdialogeditbase.cpp     pmimagemapedit.cpp         pmlightgroupedit.cpp       pmobjectsettings.cpp         pmprismedit.cpp           pmspheresweepedit.cpp  pmviewbase.cpp
    pmbumpmapedit.cpp            pmdialogview.cpp         pmimenubar.cpp             pmlineedits.cpp            pmopenglsettings.cpp         pmquickcoloredit.cpp      pmsqeedit.cpp          pmview.cpp
    pmcameraedit.cpp             pmdiscedit.cpp           pminserterrordialog.cpp    pmlinkedit.cpp             pmpalettevalueedit.cpp       pmradiosityedit.cpp       pmtextedit.cpp         pmviewfactory.cpp
    pmclippedbyedit.cpp          pmdocumentationmap.cpp   pminsertpopup.cpp          pmlistpatternedit.cpp      pmpatternedit.cpp            pmrainbowedit.cpp         pmtexturebaseedit.cpp  pmwarpedit.cpp
    pmcoloredit.cpp              pmdragwidget.cpp         pminterioredit.cpp         pmmaterialedit.cpp         pmphotonsedit.cpp            pmrawedit.cpp             pmtextureedit.cpp
    pmcolorsettings.cpp          pmerrordialog.cpp        pminteriortextureedit.cpp  pmmaterialmapedit.cpp      pmpigmentedit.cpp            pmrendermodesdialog.cpp   pmtexturemapedit.cpp
    pmcommandmanager.cpp         pmfiledialog.cpp         pmisosurfaceedit.cpp       pmmediaedit.cpp            pmplaneedit.cpp              pmrotateedit.cpp          pmtorusedit.cpp
    pmcommentedit.cpp            pmfinishedit.cpp         pmjuliafractaledit.cpp     pmmeshedit.cpp             pmscaleedit.cpp              pmtranslateedit.cpp       pmrendermanager.cpp
    pmconeedit.cpp               pmfogedit.cpp            pmlatheedit.cpp            pmmessage.cpp              pmpolynomedit.cpp            pmscanner.cpp             pmtreeview.cpp

)
